mlops-deployment/tasks.tf
resource "aws_ecs_task_definition" "react_task" {
  family                   = "react-task"
  network_mode             = "bridge"
  requires_compatibilities = ["EC2"]
  cpu                      = "512"
  memory                   = "1024"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([{
    name      = "react-app"
    image     = var.container_images["react"]
    cpu       = 256
    memory    = 512
    essential = true
    portMappings = [{
      containerPort = 80
      hostPort      = 0  # Essential for dynamic port mapping
      protocol      = "tcp"
    }]
    logConfiguration = {
      logDriver = "awslogs"
      options = {
        "awslogs-group"         = aws_cloudwatch_log_group.react_log_group.name
        "awslogs-region"        = var.region
        "awslogs-stream-prefix" = "ecs"
      }
    }
  }])
}

resource "aws_ecs_task_definition" "yolo_task" {
  family                   = "yolo-task"
  network_mode             = "bridge"
  requires_compatibilities = ["EC2"]
  cpu                      = "512"
  memory                   = "1024"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([{
    name      = "yolo-app"
    image     = var.container_images["yolo"]
    cpu       = 256
    memory    = 512
    essential = true
    portMappings = [{
      containerPort = 5001
      hostPort      = 5001
    }]
    logConfiguration = {
      logDriver = "awslogs"
      options = {
        "awslogs-group"         = aws_cloudwatch_log_group.yolo_log_group.name
        "awslogs-region"        = var.region
        "awslogs-stream-prefix" = "ecs"
      }
    }
  }])
}

resource "aws_ecs_task_definition" "depth_task" {
  family                   = "depth-task"
  network_mode             = "bridge"
  requires_compatibilities = ["EC2"]
  cpu                      = "512"
  memory                   = "1024"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([{
    name      = "depth-app"
    image     = var.container_images["depth"]
    cpu       = 256
    memory    = 512
    essential = true
    portMappings = [{
      containerPort = 5050
      hostPort      = 5050
    }]
    logConfiguration = {
      logDriver = "awslogs"
      options = {
        "awslogs-group"         = aws_cloudwatch_log_group.depth_log_group.name
        "awslogs-region"        = var.region
        "awslogs-stream-prefix" = "ecs"
      }
    }
  }])
}

resource "aws_ecs_service" "react_service" {
  name            = "react-service"
  cluster         = aws_ecs_cluster.mlops_cluster.id
  task_definition = aws_ecs_task_definition.react_task.arn
  desired_count   = 1
  launch_type     = "EC2"

  load_balancer {
    target_group_arn = aws_lb_target_group.react_tg.arn
    container_name   = "react-app"
    container_port   = 80
  }

  depends_on = [aws_lb_listener.mlops_listener]
}

resource "aws_ecs_service" "yolo_service" {
  name            = "yolo-service"
  cluster         = aws_ecs_cluster.mlops_cluster.id
  task_definition = aws_ecs_task_definition.yolo_task.arn
  desired_count   = 1
  launch_type     = "EC2"

  load_balancer {
    target_group_arn = aws_lb_target_group.yolo_tg.arn
    container_name   = "yolo-app"
    container_port   = 5001
  }

  depends_on = [aws_lb_listener.mlops_listener]
}

resource "aws_ecs_service" "depth_service" {
  name            = "depth-service"
  cluster         = aws_ecs_cluster.mlops_cluster.id
  task_definition = aws_ecs_task_definition.depth_task.arn
  desired_count   = 1
  launch_type     = "EC2"

  load_balancer {
    target_group_arn = aws_lb_target_group.depth_tg.arn
    container_name   = "depth-app"
    container_port   = 5050
  }

  depends_on = [aws_lb_listener.mlops_listener]
}
